Changes following review